--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,10 @@ a.skip{
   transition: left 1s ease-out;
   z-index: 1;
   margin: 0px 0px -200px -400px;
+}
   /* Requirement 1 code here -- Do not remove this comment. */
 
-  
-}
+
 
 
   /* Requirement 2 code here -- Do not remove this comment. */
@@ -20,21 +20,61 @@ a.skip{
 
 
   /* Requirement 3 code here -- Do not remove this comment. */
+  .container{
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+    row-gap: 30px;
+  }
+
 
 
   /* Requirement 4 code here -- Do not remove this comment. */
+  
+  .intro {
+    background-image: url("../images/header.jpg");
+    background-color: #858585;
+    min-height: 400px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
+  }
 
   /* Requirement 5 code here -- Do not remove this comment. */
 
-  /* Requirement 6 code here -- Do not remove this comment. */
+  .about, .clients, .method, .contact {
+    grid-column: 2;
+  }
 
+  /* Requirement 6 code here -- Do not remove this comment. */
+  img {
+    width: 100%;
+  }
 
   /* Requirement 7 code here -- Do not remove this comment. */
+  .about-image, .clients-image, .method-image, .contact-image {
+    grid-column: 1/-1;
+    max-height: 500px;
+  }
   
 
   /* Requirement 8 code here -- Do not remove this comment. */
+  .about, .about-image{
+    grid-row: 1;
+  }
 
+  .clients, .clients-image {
+    grid-row: 2;
+  }
+
+  .method, .method-image {
+    grid-row: 3;
+  }
+
+  .contact, .contact-image {
+    grid-row: 4;
+  }
 
 
 
@@ -46,7 +86,11 @@ a.skip{
 
   /* Requirement 9 code here -- Do not remove this comment. */
 
-
+  .about.text, .clients.text, .method.text, .contact.text {
+   text-align: center; 
+   max-height: 30vh; 
+   overflow: auto;
+  }
 
 
   /*Add the media query here.  Make sure to */
